refactor: align DCD and demo output stability